bug solved: Extra gap in left section of problem-description

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -11,7 +11,6 @@
 }
 
 .problem-pane {
-    max-height: calc(100vh - 180px);
     overflow-y: auto;
 }
 
@@ -31,6 +30,10 @@
 }
 
 @media (min-width: 992px) {
+    .problem-pane {
+        height: calc(100vh - 180px);
+    }
+
     .editor-column-divider {
         border-left: 1px solid #dee2e6;
     }
